--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.2",
+        "vue-braintree": "^2.1.0",
         "vue-router": "^3.2.0",
         "vue-sweetalert2": "^5.0.5"
     }
